// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults value if report is not present 1`] = `
<div
  className="css-1br38yu"
>
  <div
    className="css-qvzirm"
  >
    ----
  </div>
</div>
`;

exports[`defaults value if report.meta is not present 1`] = `
<div
  className="css-1br38yu"
>
  <div
    className="css-qvzirm"
  >
    ----
  </div>
</div>
`;

exports[`report total is formated 1`] = `
<div
  className="css-1br38yu"
>
  <div
    className="css-qvzirm"
  >
    formatedValue
  </div>
</div>
`;
